# snake

./: findesess
game_of_snake/game_of_snake/: main.py
project/: pyproject.toml
project/project/: __init__.py  arnaud.py  board.py  checkerboard.py  cmd_line.py  dir.py  direction.py  exceptions.py  fruit.py  game.py  game_object.py  high_scores.yaml  main.py  observer.py  score.py  scores.py  snake.py  subject.py  tile.py  utils.py
