[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Louis Di Giorgi <louis.di_giorgi@etu.minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snake = "snake:snake"